# oraclus

./: .dockerignore  .env.sample  .gitignore  LICENSE.md  Makefile  README.md  docker-compose.yaml
fastapi_app/: Dockerfile  fastapi_shell.py  pyproject.toml
fastapi_app/app/: config.py  main.py  middlewares.py  schemas.py
fastapi_app/app/common/: decorators.py  exceptions.py  generators.py  loggers.py
fastapi_app/app/routers/: erc20_txns_details_router.py
fastapi_app/app/services/: expl_service.py
