[tool.poetry]
name = "fastapi_eth_erc20_txns"
version = "0.1.0"
description = ""
authors = ["Molkenov Askhat <askhat.molkenov@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_eth_erc20_txns"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
loguru = "^0.7.0"
aiohttp = "^3.8.4"
eth-utils = "^2.1.0"
clickhouse-connect = "^0.5.20"
clickhouse-driver = "^0.2.5"
numpy = "^1.24.2"
pip = "^23.1"
aiochclient = "^2.3.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
